# akail.github.io

./: .gitignore  .onedev-buildspec.yml  CNAME  Makefile  Pipfile  _config.yml  about-this-blog.html  adding-anaconda-environment-to-jupyter.html  aio-vagrant-with-ansible.html  anaconda-in-hpc.html  anaconda-to-singularity.html  archives.html  authors.html  becoming-a-manager.html  block-iot-network-outbound-on-opnsense.html  categories.html  clean-up-sub-directories.html  cleaning-scratch-sub-directories.html  comparison-of-provisioningcluster-managers-in-hpc.html  configuring-raspbian-with-saltstack.html  develop_server.sh  documentation-in-hpc.html  future-of-open-ondemand.html  github-action-to-publish-pelican.html  hide-pelican-articles-on-output.html  index.html  index2.html  installing-open-ondemand-with-ansible.html  installing-the-slurm-controller.html  integrating-anaconda-with-lmod.html  interesting-python-packages-of-2023.html  introducing-hauberk-for-email-automation.html  making-slurm-easy-to-work-with.html  managing-unkillable-tasks-in-slurm.html  migrating-opnsense-to-proxmox-part-1.html  migrating-opnsense-to-proxmox-part-2.html  mlops-for-the-graduate-student.html  modulenotfounderror-no-module-named-phd.html  monitoring-hpc-with-prometheus.html  my-first-review.html  (+33 more)
_posts/: 2015-08-23-welcome-to-jekyll.markdown
author/: andrew-kail.html  andrew-kail2.html
category/: homelab.html  hpc.html  hpcpython.html  jupyter.html  linux.html  misc.html  monitoring.html  off-topic-python.html  opnsense.html  proxmox.html  python.html  review.html  snippet.html
(+189 files in other folders)
